# vs-2022-conan-cmake-dev-container-sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.cmake/: conan_provider.cmake  settings.cmake
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
source/: main.cpp  main.hpp
